Bugfixes Mihai Feedback
Board: only Scrollbar at sections
delettask, setusers in in board.js
no connection to backlogjs, addtask.js
backlog: Task now loaded every time from server

--- a/css/style-board.css
+++ b/css/style-board.css
@@ -13,7 +13,7 @@
 }
 
 .progress-section {
-    height: calc(100vh - 20px);
+    height: calc(100vh - 190px);
     margin-bottom: 20px;
 }
 
